add APIs for managing rules, add a list of predefined rules
